fix missing colorSet definition

--- a/src/media/less/_colorset.less
+++ b/src/media/less/_colorset.less
@@ -13,8 +13,8 @@
 .defineColorSetVars(@colorSetString) {
   @colorSet-color: '@{colorSetString}-color';
   @colorSet-bg: '@{colorSetString}-bg';
-  //@colorSet-link-color: '@{colorSetString}-link-color';
-  //@colorSet-link-hover-color: '@{colorSetString}-link-hover-color';
+  @colorSet-link-color: '@{colorSetString}-link-color';
+  @colorSet-link-hover-color: '@{colorSetString}-link-hover-color';
   //@colorSet-link-active-color: '@{colorSetString}-link-active-color';
   //@colorSet-link-bg: '@{colorSetString}-link-bg';
   //@colorSet-link-hover-bg: '@{colorSetString}-link-hover-bg';
